...
      android:layout_height="wrap_content"
      android:alpha="0.3"
      android:src="@drawable/dot" />
  </androidx.appcompat.widget.LinearLayoutCompat>
  
  <Button
    android:id="@+id/onboarding_start_button"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:text="@string/onboarding_start_button_title"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="20dp"
...
